--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,6 +29,10 @@ jobs:
       - name: Run everyday job
         run: |
           go run main.go
+      
+      - name: Remove old file
+        run: |
+          rm -rf output/output.html
           
       - name: Push to github
         uses: EndBug/add-and-commit@v9.1.1
