--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run everyday job
         run: |
           rm -rf output/output.html
-          mkdir output
+          mkdir -p output
           touch output/output.html
           go run main.go
           
